--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -29,11 +29,8 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install mypy
-        run: pip install mypy
-
-      - name: Install mypy types
-        run: mypy ./inventory_tools/. --install-types
+      - name: Install mypy and types 
+        run: bench pip install mypy types-python-dateutil types-pytz --yes
 
       - name: Run mypy
         uses: sasanquaneuf/mypy-github-action@releases/v1
