--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -30,7 +30,7 @@ jobs:
           python-version: '3.10'
 
       - name: Install mypy and types 
-        run: python -m pip install mypy types-python-dateutil types-pytz --yes
+        run: yes | python -m pip install mypy types-python-dateutil types-pytz
 
       - name: Run mypy
         uses: sasanquaneuf/mypy-github-action@releases/v1
