--- a/inventory_tools/inventory_tools/doctype/inventory_tools_settings/inventory_tools_settings.json
+++ b/inventory_tools/inventory_tools/doctype/inventory_tools_settings/inventory_tools_settings.json
@@ -7,6 +7,7 @@
  "editable_grid": 1,
  "engine": "InnoDB",
  "field_order": [
+  "inventory_tools_tab",
   "company",
   "material_demand_section",
   "purchase_order_aggregation_company",
@@ -28,7 +29,10 @@
   "column_break_ddssn",
   "allow_alternative_workstations",
   "uoms_section",
-  "enforce_uoms"
+  "enforce_uoms",
+  "faceted_search_tab",
+  "show_on_website",
+  "show_in_listview"
  ],
  "fields": [
   {
@@ -153,6 +157,28 @@
    "fieldname": "allow_alternative_workstations",
    "fieldtype": "Check",
    "label": "Allow Alternative Workstations"
+  },
+  {
+   "fieldname": "inventory_tools_tab",
+   "fieldtype": "Tab Break",
+   "label": "Inventory Tools"
+  },
+  {
+   "fieldname": "faceted_search_tab",
+   "fieldtype": "Tab Break",
+   "label": "Faceted Search"
+  },
+  {
+   "default": "0",
+   "fieldname": "show_on_website",
+   "fieldtype": "Check",
+   "label": "Show on Website"
+  },
+  {
+   "default": "0",
+   "fieldname": "show_in_listview",
+   "fieldtype": "Check",
+   "label": "Show in Listview"
   }
  ],
  "index_web_pages_for_search": 1,
