Test alternative workstation (#80)
* test: add test for alternative workstation

* feat: make alternative workstations configurable

* fix: uncomment js code for testing

* feat: search alternative workstation names

* refactor: pop filters that cause error for Workstation

* chore: update override commit hash

---------

Co-authored-by: Heather Kusmierz <heather.kusmierz@gmail.com>

--- a/inventory_tools/inventory_tools/doctype/inventory_tools_settings/inventory_tools_settings.json
+++ b/inventory_tools/inventory_tools/doctype/inventory_tools_settings/inventory_tools_settings.json
@@ -25,7 +25,8 @@
   "overproduction_percentage_for_work_order",
   "section_break_0",
   "update_warehouse_path",
-  "section_break_gzcbr",
+  "column_break_ddssn",
+  "allow_alternative_workstations",
   "uoms_section",
   "enforce_uoms"
  ],
@@ -79,18 +80,14 @@
   },
   {
    "fieldname": "section_break_0",
-   "fieldtype": "Section Break"
+   "fieldtype": "Section Break",
+   "label": "Warehouses and Workstations"
   },
   {
    "default": "0",
    "fieldname": "update_warehouse_path",
    "fieldtype": "Check",
    "label": "Update Warehouse Path"
-  },
-  {
-   "fieldname": "section_break_gzcbr",
-   "fieldtype": "Section Break",
-   "label": "Warehouses"
   },
   {
    "fieldname": "uoms_section",
@@ -146,11 +143,21 @@
    "fieldtype": "Link",
    "label": "Aggregated Sales Warehouse",
    "options": "Warehouse"
+  },
+  {
+   "fieldname": "column_break_ddssn",
+   "fieldtype": "Column Break"
+  },
+  {
+   "default": "0",
+   "fieldname": "allow_alternative_workstations",
+   "fieldtype": "Check",
+   "label": "Allow Alternative Workstations"
   }
  ],
  "index_web_pages_for_search": 1,
  "links": [],
- "modified": "2024-04-12 10:02:32.688310",
+ "modified": "2024-05-13 13:19:00.665445",
  "modified_by": "Administrator",
  "module": "Inventory Tools",
  "name": "Inventory Tools Settings",
