--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -91,6 +91,7 @@ jobs:
         run: |
           source env/bin/activate
           cd apps/inventory_tools
+          poetry install
           pytest --cov=inventory_tools --cov-report=xml --disable-warnings -s | tee pytest-coverage.txt
 
       - name: Pytest coverage comment
