--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -73,6 +73,9 @@ jobs:
       #     restore-keys: |
       #       ${{ runner.os }}-yarn-
 
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+
       - name: Install JS Dependencies
         run: yarn --prefer-offline
 
