--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -10,6 +10,12 @@ on:
       - version-14
       - version-15
 
+permissions:
+  contents: write
+  checks: write
+  issues: write
+  pull-requests: write
+
 jobs:
   tests:
     runs-on: ${{ matrix.os }}
