--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
 	"name": "inventory_tools",
-	"scripts": {},
 	"dependencies": {
-		"onscan.js": "^1.5.2"
+		"@vitejs/plugin-vue": "^4.0.0",
+		"@vueuse/core": "^10.11.0",
+		"fabric": "^6.0.1",
+		"vite": "^4.0.2",
+		"vue": "^3.3.10"
 	},
 	"devDependencies": {},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/agritheory/invnetory_tools.git"
+		"url": "https://github.com/agritheory/inventory_tools.git"
 	},
 	"publishConfig": {
 		"access": "restricted"
@@ -17,5 +20,9 @@
 		"branches": [
 			"version-14"
 		]
+	},
+	"scripts": {
+		"build": "vite build --config=./inventory_tools/public/js/vite.config.js",
+		"dev": "vite build --watch --config=./inventory_tools/public/js/vite.config.js"
 	}
 }
