Revert "ci: track overrides for purchase, stock and manufacturing cycles (v15…"
This reverts commit 0bb45c7a15b36914b4e5ac19e99b4ce1ea9654fd.

--- a/package.json
+++ b/package.json
@@ -12,5 +12,11 @@
 	"publishConfig": {
 		"access": "restricted"
 	},
-	"private": true
+	"private": true,
+	"release": {
+		"branches": [
+			"version-14",
+			"version-15"
+		]
+	}
 }
