--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -6,6 +6,9 @@ on:
       - version-14
       - version-15
   pull_request:
+    branches:
+      - version-14
+      - version-15
 
 permissions:
   contents: write
@@ -15,8 +18,12 @@ permissions:
 
 jobs:
   tests:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+      fail-fast: false
     name: Server
-    runs-on: ubuntu-latest
 
     services:
       mariadb:
@@ -85,7 +92,8 @@ jobs:
         env:
           MYSQL_HOST: 'localhost'
           MYSQL_PWD: 'admin'
-        run: bash ${{ github.workspace }}/.github/helper/install.sh
+        run: |
+          bash ${{ github.workspace }}/.github/helper/install.sh
 
       - name: Run Tests
         working-directory: /home/runner/frappe-bench
