ci: install mypy types non-interactive

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -30,7 +30,7 @@ jobs:
         run: pip install mypy
 
       - name: Install mypy types
-        run: mypy ./inventory_tools/. --install-types
+        run: mypy ./inventory_tools/. --install-types --non-interactive
 
       - name: Run mypy
         uses: sasanquaneuf/mypy-github-action@releases/v1
