ci: install apps fixes, move test fixtures to separate job name

--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -87,6 +87,11 @@ jobs:
           MYSQL_PWD: 'admin'
         run: bash ${{ github.workspace }}/.github/helper/install.sh
 
+      - name: Install Test Fixtures
+        working-directory: /home/runner/frappe-bench
+        run: |
+          bench execute 'inventory_tools.tests.setup.before_test'
+
       - name: Run Tests
         working-directory: /home/runner/frappe-bench
         run: |
