--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.pytest.ini_options]
-addopts = "--cov=inventory_tools --cov-report term-missing"
+addopts = "-s --disable-warnings" #--cov=inventory_tools --cov-report term-missing"
 
 [tool.black]
 line-length = 99
