--- a/package.json
+++ b/package.json
@@ -1,25 +1,24 @@
 {
 	"name": "inventory_tools",
+	"private": true,
 	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/agritheory/inventory_tools.git"
+	},
 	"scripts": {
 		"build": "vite build --config=./inventory_tools/public/js/vite.config.js",
 		"dev": "vite build --watch --config=./inventory_tools/public/js/vite.config.js"
 	},
 	"dependencies": {
-		"@vueuse/core": "^10.9.0",
-		"vue": "^3.3.10"
+		"@vueuse/core": "^10.11.0",
+		"vue": "^3.4.35"
 	},
 	"devDependencies": {
-		"@vitejs/plugin-vue": "^4.0.0",
-		"frappe-ui": "^0.0.105",
-		"vite": "^4.0.2"
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/agritheory/inventory_tools.git"
+		"@vitejs/plugin-vue": "^5.1.2",
+		"vite": "^5.3.5"
 	},
 	"publishConfig": {
 		"access": "restricted"
-	},
-	"private": true
+	}
 }
