--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ mypy = "^1.10.0"
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
+[tool.codespell]
+skip = "CHANGELOG.md"
+
 [tool.pytest.ini_options]
 addopts = "--cov=inventory_tools --cov-report term-missing"
 
