--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -36,6 +36,13 @@ repos:
       - id: flake8
         additional_dependencies: ['flake8-bugbear']
 
+  - repo: https://github.com/codespell-project/codespell
+    rev: v2.3.0
+    hooks:
+      - id: codespell
+        additional_dependencies:
+          - tomli
+
   - repo: https://github.com/agritheory/test_utils
     rev: v0.15.0
     hooks:
