--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -73,6 +73,9 @@ jobs:
       #     restore-keys: |
       #       ${{ runner.os }}-yarn-
 
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+
       - name: Install JS Dependencies
         run: yarn --prefer-offline
 
@@ -90,4 +93,12 @@ jobs:
         working-directory: /home/runner/frappe-bench
         run: |
           source env/bin/activate
-          pytest ./apps/inventory_tools/inventory_tools/tests/ --disable-warnings -s
+          cd apps/inventory_tools
+          poetry install
+          pytest --cov=inventory_tools --cov-report=xml --disable-warnings -s | tee pytest-coverage.txt
+
+      - name: Pytest coverage comment
+        uses: MishaKav/pytest-coverage-comment@main
+        with:
+          pytest-coverage-path: /home/runner/frappe-bench/apps/inventory_tools/pytest-coverage.txt
+          junitxml-path: /home/runner/frappe-bench/apps/inventory_tools/coverage.xml
